--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,18 @@
 	        		<li><a href="mailto:mikeskim[at]gmail(dot)com">email</a></li>
 	        		<li><a href="https://github.com/mikes-kim">github.com/mikes-kim</a></li>
 				</ul>
+				
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- git1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1121951447808239"
+     data-ad-slot="7028702677"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+				
 			</footer>
 		</body>
 	</html>
