--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,11 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:mikeskim[at]gmail(dot)com">email</a></li>
+	        		<li><a href="mailto:mikes.kim[at]gmail(dot)com">email</a></li>
 	        		<li><a href="https://github.com/mikes-kim">github.com/mikes-kim</a></li>
 				</ul>
+				
+				<iframe src="http://www.linkedin.com/pub/mike-kim/b/8ab/12a" height="1" width="1" frameBorder="0"></iframe>
 				
 				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- git1 -->
