--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ a {
 }
 a:hover {
     text-decoration: underline;
-    background-color: #018343;
+    background-color: #FFF8C6;
 }
 h1 {
     font-size: 3em;
