--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,8 @@ a {
     color: #999;
 }
 a:hover {
-    text-decoration: underline;
-    background-color: #FFF8C6;
+    /*text-decoration: underline;*/
+    background-color: #82CAFF;
 }
 h1 {
     font-size: 3em;
