--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,9 @@ a {
 }
 a:hover {
     /*text-decoration: underline;*/
-    background-color: #82CAFF;
+    background-color: #004476;
+    color:#fff;
+    padding:5px 10px;
 }
 h1 {
     font-size: 3em;
