--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+nav {
+    position:fixed;
+    top:0;
+}
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
