--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,10 @@ body {
 nav {
     position:fixed;
     top:0;
+    width:100%;
     background-color:#fff;
-    opacity:0.8;
-    padding-top:20px;
-    padding-bottom:20px;
+    padding-top:10px;
+    padding-bottom:10px;
     border-bottom:solid 1px #aaa;
 }
 nav ul, footer ul {
