--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@ a:hover {
 h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    margin-top:2em;
 }
 p {
     font-size: 1.5em;
